Fixed content for pricing pages, fixed mobile menu close button and z-index, removed "Contacts" link from footer, cause have livechat

--- a/themes/pixboost/assets/css/v2/prices-page.css
+++ b/themes/pixboost/assets/css/v2/prices-page.css
@@ -388,7 +388,7 @@
     }
 
     #example .background {
-        clip-path: ellipse(190% 51% at 50% 53%);
+        clip-path: ellipse(190% 53% at 50% 53%);
     }
 
     #example .infographic .card {
